--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <h2 id="seconds">xx</h2>
             </div>
         </div>
+
+        <div id="progressBar">
+            <progress value="1" max="10"></progress>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
