--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 style="text-align: center;">Inserir Data do Evento</h1>
             <div class="flex" id="inserirData">
                 <input class="margin" type="date" name="" id="dataAlvo">
-                <button class="margin" type="submit" id="enviarData" onclick="">Enviar</button>      
+                <button class="margin startButton" type="submit" id="enviarData" onclick="">Start</button>
             </div>
         </div>
             
