--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
         </div>
             
         <div id="countdown" class="flex">
-            <div class=marginB>
+            <div class="marginB">
                 <h2>Dias</h2>
                 <h2 id="days">xx</h2>
             </div>
 
-            <div class=marginB>    
+            <div class="marginB">    
                 <h2>Horas</h2>
                 <h2 id="hours">xx</h2>
             </div>
             
-            <div class=marginB>
+            <div class="marginB">
                 <h2>Minutos</h2>
                 <h2 id="minutes">xx</h2>
             </div>
 
-            <div class=marginB>
+            <div class="marginB">
                 <h2>Segundos</h2>
                 <h2 id="seconds">xx</h2>
             </div>
         </div>
 
         <div id="progressBar">
-            <progress value="1" max="10"></progress>
+            <progress value="0" max="10"></progress>
         </div>
     </div>
     <script src="./script.js"></script>
