--- a/index.html
+++ b/index.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-
-
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <div class="container">
-        <div>
-            <h1 style="text-align: center;">Inserir Data do Evento</h1>
-            <div class="flex" id="inserirData">
-                <input class="margin" type="date" name="" id="dataAlvo">
-                <button class="margin startButton" type="submit" id="enviarData" onclick="">Start</button>
-            </div>
+      <div>
+        <h1 style="text-align: center">Inserir Data do Evento</h1>
+        <div class="flex" id="inserirData">
+          <input class="margin" type="date" name="" id="dataAlvo" />
+          <button
+            class="margin startButton"
+            type="submit"
+            id="enviarData"
+            onclick=""
+          >
+            Start
+          </button>
         </div>
-            
-        <div id="countdown" class="flex">
-            <div class="marginB">
-                <h2>Dias</h2>
-                <h2 id="days">xx</h2>
-            </div>
+      </div>
 
-            <div class="marginB">    
-                <h2>Horas</h2>
-                <h2 id="hours">xx</h2>
-            </div>
-            
-            <div class="marginB">
-                <h2>Minutos</h2>
-                <h2 id="minutes">xx</h2>
-            </div>
-
-            <div class="marginB">
-                <h2>Segundos</h2>
-                <h2 id="seconds">xx</h2>
-            </div>
+      <div id="countdown" class="flex">
+        <div class="marginB">
+          <h2>Dias</h2>
+          <h2 id="days">xx</h2>
         </div>
 
-        <div id="progressBar">
-            <progress value="0" max="10"></progress>
+        <div class="marginB">
+          <h2>Horas</h2>
+          <h2 id="hours">xx</h2>
         </div>
+
+        <div class="marginB">
+          <h2>Minutos</h2>
+          <h2 id="minutes">xx</h2>
+        </div>
+
+        <div class="marginB">
+          <h2>Segundos</h2>
+          <h2 id="seconds">xx</h2>
+        </div>
+      </div>
     </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
